# ATAS

./: .gitignore  README.md
Project-Overview/Design/Inner_design/Classes/: Database.typ  Network.typ
Project-Overview/Design/Inner_design/Pipeline/: Data_pipeline.typ  Metric_pipeline.typ
Project-Overview/Design/Outer_design/: Outer_design.typ  database.plantuml  uml.plantuml
Project-Overview/Design/Requirements/: Requirements.typ
Project-Overview/Testing_stuff/: notes.typ
Project-Overview/Testing_stuff/test_OSMNX/: osmnx_test.py
Project-Overview/Testing_stuff/test_combining/: combining.py
Project-Overview/Testing_stuff/test_duckdb/: read_KWB.py
Project-Overview/Testing_stuff/test_geomap/: geomap.py
Project-Overview/Testing_stuff/test_uml/: test_uml.wsd
The_package/: .gitignore  README.md  dependencies.txt  pyproject.toml
The_package/scripts/: compare_scores.py  run_correlations.py  run_correlations_synthetic.py  run_equity.py  run_maps.py  run_sensitivity.py
The_package/src/atas/: exceptions.py
The_package/src/atas/config/: data_path.py  functions.py  settings.py
The_package/src/atas/core/: _accessibility_model.py  _accessibility_score.py  _attractiveness.py  _benefit.py  _classes.py  _t_travel.py  _t_walk.py
The_package/src/atas/utils/: data_manager.py  util_OSMnx.py  util_plotting.py
The_package/tests/: test_accessibility.py  test_classes.py  test_config.py  test_sensitivity.py  test_utils.py
The_package/tests/TestDatasets/: .~lock.kwb2024.csv#  important.txt
