[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atas"
version = "0.1.0"
description = "Amsterdam Transit Accessibility Simulation"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Arjan van Staveren", email = "arjanvstav@gmail.com" }
]
requires-python = ">=3.10"

dependencies = [
    "duckdb>=1.0",
    "osmnx>=2.0",
    "geopandas>=0.14",
    "pyarrow>=14.0",
    "scipy>=1.11",
    "requests>=2.31",
    "r5py>=0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov",
    "black",
    "ruff",
    "mypy",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

# Include non-code files if needed
[tool.setuptools.package-data]
"atas" = ["py.typed"]

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra -q"

# Optional: coverage config
[tool.coverage.run]
source = ["atas"]

[tool.coverage.report]
show_missing = true

# Optional: linting (ruff)
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

# Optional: formatting (black)
[tool.black]
line-length = 100
target-version = ["py310"]
